Added the favicons

--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<link rel="apple-touch-icon" sizes="180x180" href="%svelte.assets%/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="%svelte.assets%/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="%svelte.assets%/favicon-16x16.png">
+		<link rel="manifest" href="%svelte.assets%/site.webmanifest">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
